test/spec_vectors/elem/ok/module_88.wat
(module (import "exporter" "table" (table $t 2 externref)) (elem (i32.const 0) externref (ref.null extern)))