test/spec_vectors/elem/fail/module_86.wat
(module (table $t 1 funcref) (elem $e externref (ref.null extern)) (func (table.init $t $e (i32.const 0) (i32.const 0) (i32.const 1))))